src/landingPage/FooterSection.module.scss
.footer {
  background: #26282c;
  min-height: 100vh;
  position: relative;
  width: 100%;
  
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  
  .leftColumn {
    min-height: 90vh;
    bottom: 10vh;
    margin-left: 10vw;
  }

  h1 {
    font-style: 'Chillax';
    color: #e3e3e3;
    font-size: 8rem;
    line-height: 100%;
    width: 50vw;
    
    padding-top: 5vh;
    padding-bottom: 10vh;

  }

  li {
    margin-top: 2vh;

  }

  a {
    font-style: 'Satoshi';
    width: fit-content;
    color: #e3e3e3;
    text-decoration: none;
    font-size: 1.5rem;

    &:hover {
      text-decoration: white solid underline;
    }
  }

  .content {
    list-style: none;
    position: absolute;
    bottom: 5vh;
  }

  .downloadButton {
    
    button {
      font-family: 'Satoshi';
      width: fit-content;
      height: fit-content;
      color: #e3e3e3;
      font-size: 1.5rem;
      background-image: linear-gradient(270deg, #2af588 0%, #334675 99.99%);
      border-radius: 2vmin;

      padding-inline: max(2vmin, 4vw);
      padding-block: max(1vmin, 1vh);
    }
  }

  .copyright {
    margin-top: 10vh;
    color: #e3e3e3;
  }

  .svg {
    // position: absolute;
    // right: 0px;
    // bottom: 10vh;
    // width: 50vw;
    height: 90vh;
  }
}

